--- a/media.html
+++ b/media.html
@@ -1058,7 +1058,7 @@
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img class="lazyload" data-src="./img/v1.png" alt="">
+                                                <img class="lazyload" data-src="./img/v1.webp" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1070,7 +1070,7 @@
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img class="lazyload" data-src="./img/v5.png" alt="">
+                                                <img class="lazyload" data-src="./img/v5.webp" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1081,58 +1081,58 @@
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img3_big.jpg">
-                                            <img class="lazyload" data-src="./img/5.png" alt="">
+                                            <img class="lazyload" data-src="./img/5.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img2_big.jpg">
-                                            <img class="lazyload" data-src="./img/2.png" alt="">
+                                            <img class="lazyload" data-src="./img/2.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img10_big.jpg">
-                                            <img class="lazyload" data-src="./img/7.png" alt="">
+                                            <img class="lazyload" data-src="./img/7.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img10_big.jpg">
-                                            <img class="lazyload" data-src="./img/7.png" alt="">
+                                            <img class="lazyload" data-src="./img/7.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img13_big.jpg">
-                                            <img class="lazyload" data-src="./img/8.png" alt="">
+                                            <img class="lazyload" data-src="./img/8.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img3_big.jpg">
-                                            <img class="lazyload" data-src="./img/5.png" alt="">
+                                            <img class="lazyload" data-src="./img/5.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img6_big.jpg">
-                                            <img class="lazyload" data-src="./img/6.png" alt="">
+                                            <img class="lazyload" data-src="./img/6.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img10_big.jpg">
-                                            <img class="lazyload" data-src="./img/7.png" alt="">
+                                            <img class="lazyload" data-src="./img/7.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img13_big.jpg">
-                                            <img class="lazyload" data-src="./img/8.png" alt="">
+                                            <img class="lazyload" data-src="./img/8.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img7_big.jpg">
-                                            <img class="lazyload" data-src="./img/9.png" alt="">
+                                            <img class="lazyload" data-src="./img/9.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img class="lazyload" data-src="./img/v3.png" alt="">
+                                                <img class="lazyload" data-src="./img/v3.webp" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1143,13 +1143,13 @@
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img11_big.jpg">
-                                            <img class="lazyload" data-src="./img/10.png" alt="">
+                                            <img class="lazyload" data-src="./img/10.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img class="lazyload" data-src="./img/v3.png" alt="">
+                                                <img class="lazyload" data-src="./img/v3.webp" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1165,18 +1165,18 @@
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img7_big.jpg">
-                                            <img class="lazyload" data-src="./img/9.png" alt="">
+                                            <img class="lazyload" data-src="./img/9.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img13_big.jpg">
-                                            <img class="lazyload" data-src="./img/8.png" alt="">
+                                            <img class="lazyload" data-src="./img/8.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img class="lazyload" data-src="./img/v4.png" alt="">
+                                                <img class="lazyload" data-src="./img/v4.webp" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1187,12 +1187,12 @@
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img3_big.jpg">
-                                            <img class="lazyload" data-src="./img/5.png" alt="">
+                                            <img class="lazyload" data-src="./img/5.webp" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img3_big.jpg">
-                                            <img class="lazyload" data-src="./img/5.png" alt="">
+                                            <img class="lazyload" data-src="./img/5.webp" alt="">
                                         </a>
                                     </div>
                                 </div>
